update like page url

--- a/index.jade
+++ b/index.jade
@@ -27,7 +27,7 @@ html(lang="en")
             .fb-like-box(data-href="https://www.facebook.com/data.visualize",data-colorscheme="light",
               data-show-faces="false",data-header="false",data-stream="false",data-show-border="false")
         .col-sm-6.text-left
-          .fb-like-link(style="margin-top:10px"): .fb-like(data-href="http://data.infographics.tw/viz/water-rationing/",data-width="300",
+          .fb-like-link(style="margin-top:10px"): .fb-like(data-href="http://data.infographics.tw/viz/global-earthquake/",data-width="300",
             data-layout="standard",data-action="like",data-show-faces="true",data-share="true")
 
     script(type="text/javascript",src="http://d3js.org/topojson.v1.min.js")
