--- a/index.jade
+++ b/index.jade
@@ -15,7 +15,7 @@ html(lang="en")
     // custom files
     link(rel="stylesheet",type="text/css",href="index.css")
   body
-    svg#svg(width="800px",height="600px",viewBox="0 0 800 600",preserveAspectRatio="xMidYMid",style="margin:auto;display:block")
+    svg#svg(width="100%",height="600px",viewBox="0 0 800 600",preserveAspectRatio="xMidYMid",style="margin:auto;display:block")
     div(style="text-align:center")
       h2 近三十日全球地震視覺化
       p 
