fix for responsive

--- a/index.jade
+++ b/index.jade
@@ -21,7 +21,7 @@ html(lang="en")
       p 
         | 資料來源:
         a(href="http://earthquake.usgs.gov/") USGS
-      .row
+      .row(style="margin:10px")
         .col-sm-6.text-right
           .fb-box
             .fb-like-box(data-href="https://www.facebook.com/data.visualize",data-colorscheme="light",
