--- a/index.jade
+++ b/index.jade
@@ -18,10 +18,11 @@ html(lang="en")
     svg#svg(width="100%",height="600px",viewBox="0 0 800 600",preserveAspectRatio="xMidYMid",style="margin:auto;display:block")
     div(style="text-align:center")
       h2 
-        small &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         | 近三十日全球地震視覺化
-        small: small(style="color:#444")  ( 規模 2.5 以上 )
       p 
+
+        | ( 包含 30 日內規模 2.5 以上之地震 )
+        br
         | 資料來源:
         a(href="http://earthquake.usgs.gov/") USGS
       .row(style="margin:10px")
