--- a/index.jade
+++ b/index.jade
@@ -16,6 +16,8 @@ html(lang="en")
     link(rel="stylesheet",type="text/css",href="index.css")
   body
     svg#svg(width="100%",height="600px",viewBox="0 0 800 600",preserveAspectRatio="xMidYMid",style="margin:auto;display:block")
+      circle(cx="660",cy="300",r="5",fill="rgba(128,96,28,0.5)",stroke="rgba(129,96,28,1)")
+      text(x="660",y="315",text-anchor="middle",dominant-baseline="central",font-size="12",fill="#444") recent volcano activity
     div(style="text-align:center")
       h2 
         | 近三十日全球地震視覺化
